<resources>
    <!--title-->
    <string name="app_name">hmmm</string>
    <string name="by_company">by humdinger</string>

    <!--buttons-->
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_forget">Forget Login</string>
    <string name="login_with_google">Login with Google+</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="navigation_icon_description">Navigate</string>
    <string name="search_description">Search</string>
    <string name="action_search">Search</string>
    <string name="action_chat">Chat</string>
    <string name="action_profile">Profile</string>
    <string name="action_previous">Back</string>
    <string name="action_match_cancel">No</string>
    <string name="action_match_accept">Yes</string>
    <string name="action_match_save">Save</string>


    <!--activity-->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_match">MatchActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_search_settings">SearchSettingsActivity</string>
    <string name="title_activity_app_settings">AppSettingsActivity</string>
    <string name="title_activity_dispatch">DispatchActivity</string>

    <!--firebase-->
    <string name="FIREBASE_URL">https://intense-inferno-5397.firebaseio.com</string>
    <string name="title_activity_menu">MenuActivity</string>

</resources>
