<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MatchActivity">

    <item android:id="@+id/action_match"
        android:title="@string/app_name"
        app:showAsAction="always"
        android:orderInCategory="1"
        android:menuCategory="secondary"/>

    <item android:id="@+id/action_chat"
        android:icon="@drawable/ic_action_chat"
        android:title="@string/action_chat"
        app:showAsAction="always"
        android:orderInCategory="2"
        android:menuCategory="secondary"/>

    <item android:id="@+id/action_profile"
        android:icon="@drawable/ic_action_person"
        android:title="@string/action_profile"
        app:showAsAction="always"
        android:orderInCategory="3"
        android:menuCategory="secondary"/>

    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="99"
        app:showAsAction="never" />

    <item android:id="@+id/action_forget"
        android:title="@string/action_forget"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
