<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MatchActivity">

    <item android:id="@+id/action_match_previous"
        android:icon="@drawable/ic_action_undo"
        android:title="@string/action_previous"
        app:showAsAction="always"
        android:orderInCategory="1"
        android:menuCategory="secondary"/>

    <item android:id="@+id/action_match_cancel"
        android:title="@string/action_match_cancel"
        android:icon="@drawable/ic_action_cancel"
        app:showAsAction="always"
        android:orderInCategory="2"
        android:menuCategory="secondary"/>

    <item android:id="@+id/action_match_accept"
        android:title="@string/action_match_accept"
        android:icon="@drawable/ic_action_accept"
        app:showAsAction="always"
        android:orderInCategory="3"
        android:menuCategory="secondary"/>

    <item android:id="@+id/action_match_save"
        android:title="@string/action_match_save"
        android:icon="@drawable/ic_action_important"
        app:showAsAction="always"
        android:orderInCategory="4"
        android:menuCategory="secondary"/>

    <item android:id="@+id/action_match_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_action_settings"
        app:showAsAction="always"
        android:orderInCategory="5"
        android:menuCategory="secondary"/>
</menu>
